# ChangeLog for Gentoo Linux Installer
# Copyright 2004 Gentoo Technologies, Inc.
# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.69 2005/02/16 06:24:29 agaffney Exp $

*GLI-gtkfe-0.01 (11 Dec 2004)

  16 Feb 2005; Andrew Gaffney <agaffney@gentoo.org>
  Added PartitioningMain which has a gtk.Notebook for Partitioning and
  PartitioningUgly (will be renamed).

  06 Feb 2005; Andrew Gaffney <agaffney@gentoo.org>
  Added GRP checkbox in Stage.py

  01 Feb 2005; John Laliberte <allanonl@bu.edu>
  ExtraPackages.py - Added class Details.  Large portions updated so
  that there is now a tree structure of packages associated with each
  section and category. Many visual changes to the screen.

  31 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
  Changed vertical spacing for install steps. Removed "Install" activation
  if profile is loaded. Bottom buttons are dynamically generated. Cleaned up
  unneeded code from Partitioning.py

  30 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
  Deleting and recreating swap doesn't cause nastiness anymore. Switched
  to dynamically creating color key blocks. Made "whole disk" display taller
  to begin with. Fixed primary/logical checking in PartProperties.py

  29 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
  Shell for partition properties dialog. Added "working" Ok and Cancel
  buttons to PartProperties.py. Began moving code from Partitioning.py
  to PartProperties.py. Lots more code moved. All editing functionality
  moved to PartProperties.py

  27 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
  add len(sys.argv) check so gtkfe.py can be run without -p. Readded
  development-sources and gentoo-dev-sources to Kernel.py

  26 Jan 2005; John Laliberte <allanonl@bu.edu>
  ExtraPackages.py - major overhaul of the screen.  Uses objects for the
  'Section' and 'Category'.

  24 Jan 2005; John Laliberte <allanonl@bu.edu>
  Networking.py - fixed the bug where if no device was entered, it would