@@ -1,12 +1,13 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.69 2005/02/16 06:24:29 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.70 2005/02/17 02:16:11 agaffney Exp $
 
 *GLI-gtkfe-0.01 (11 Dec 2004)
 
   16 Feb 2005; Andrew Gaffney <agaffney@gentoo.org>
   Added PartitioningMain which has a gtk.Notebook for Partitioning and
-  PartitioningUgly (will be renamed).
+  PartitioningUgly (will be renamed). PartitioningMain calls activate()
+  in child screens.
 
   06 Feb 2005; Andrew Gaffney <agaffney@gentoo.org>
   Added GRP checkbox in Stage.py
